css/style.css
* {-moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box;}
html, body {width:100%; height:100%; font: 1em/1.2em Arial, Helvetica, sans-serif; paddging:0; margin:0;}
a {color:#fff; text-decoration:none;}
a:hover {color:#ddd; text-decoration:underline;}
body {
	background:#626262;
	background:-moz-linear-gradient(top,#626262 1%,#888 100%);
	background:-webkit-linear-gradient(top,#626262 1%,#888 100%);
	background:-o-linear-gradient(top,#626262 1%,#888 100%);
	background:-ms-linear-gradient(top,#626262 1%,#888 100%);
	background:linear-gradient(top,#626262 1%,#888 100%);
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#626262',endColorstr='#888',GradientType=0);
}
.header {
	height:9.3em; width:100%; padding:.4em; margin:0; background:#09750c; border-bottom:.1em solid #000; box-shadow:0 .1em .1em 0 #333;
	background:-moz-linear-gradient(top,  #09750c 0%, #004f16 100%);
	background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#09750c), color-stop(100%,#004f16));
	background:-webkit-linear-gradient(top,  #09750c 0%,#004f16 100%);
	background:-o-linear-gradient(top,  #09750c 0%,#004f16 100%);
	background:-ms-linear-gradient(top,  #09750c 0%,#004f16 100%);
	background:linear-gradient(top,  #09750c 0%,#004f16 100%);
	filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#09750c', endColorstr='#004f16',GradientType=0 );
}
.sitetitle {font: 5em/.9em "chennai-slab",serif; margin:0 auto .25em auto; color:#ddd; text-shadow:.075em .075em .15em #222; filter:dropshadow(color=#222,offx=2,offy=2); text-align:center;}
.sitetitle a, .sitetile a:hover {color:#ddd; text-decoration:none;}
.data-entry {min-width:19em; max-width:45em; margin:0 auto; text-align:center;}
.url-entry {width:19em; height:1.9em; padding:.2em; border:.1em solid #ccc; background:#fff; color:#222; border-radius:.25em;}
.show-width {display:none; height:1.9em; padding:.2em; color:#fff;}
.show-width:hover {color:#aaa;}
.show-width:focus, .show-width:active {border:.1em solid #ccc; background:#fff; color:#222; border-radius:.25em;}
.button {
	font-weight:bold; border:.1em solid #999; border-radius:.25em; text-shadow:0 .1em .1em #fff; padding:.3em; white-space:nowrap; color:#004f16;
	cursor:pointer; background-color:#e0e0e0; height:2.3em; display:inline-block; vertical-align:baseline;
	background-image:-moz-linear-gradient(top,#fff,#e0e0e0);
	background-image:-ms-linear-gradient(top,#fff,#e0e0e0);
	background-image:-webkit-linear-gradient(top,#fff,#e0e0e0);
	background-image:-o-linear-gradient(top,#fff,#e0e0e0);
	-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e0e0e0')";
	background-image:linear-gradient(top,#fff,#e0e0e0);
	box-shadow:0 .15em .15em rgba(0,0,0,0.25),inset 0 0 .2em #fff;
}
.button:hover, .button:focus, .button:active {
	border:.1em solid #aaa; border-bottom-color:#ccc; border-top-color:#999; background-color:#e6e6e6; box-shadow:inset 0 .1em .15em #aaa;
	background-image:-webkit-linear-gradient(top,#e6e6e6,#dcdcdc);
	background-image:-moz-linear-gradient(top,#e6e6e6,#dcdcdc);
	background-image:-ms-linear-gradient(top,#e6e6e6,#dcdcdc);
	background-image:-o-linear-gradient(top,#e6e6e6,#dcdcdc);
}
.button span {border-bottom:.1em solid #004f16;}
a.button {height:1.9em;}
a.button-help:hover {text-decoration:none; color:#004f16;}
.button-pause, .button-plus, .button-minus, .show-width {display:none;}
.desc {width:60%; min-width:19em; margin:2em auto; background:#555; border:.15em solid #fff; color:#ccc; border-radius:1em; padding:2em; box-shadow:0 0 .2em .2em #333; text-shadow: .1em .1em .2em #222;}
.desc code {font:1em Courier; color:#aaa; text-shadow:none;}
.controls {list-style:none;}
.loading {text-align:center; display:none; margin:1em auto;}
/* RESIZING CSS STATE */
.resizing .button-pause, .resizing .show-width {display:inline-block;}
.paused  .button-plus, .paused .button-minus {display:inline-block;}
.resizing .button-help, .resizing .sitetitle, .resizing .url-entry {display:none;}
.resizing .header {height:3.1em;}
.resizing .data-entry {text-align:left; margin:0;}

